ts, gts, eslint, prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,4 +23,9 @@
     "tests/**/*",
     "types/**/*"
   ]
-}
+,
+    "glint": {
+      "environment": ["ember-loose", "ember-template-imports"]
+    },
+    "exclude": ["blueprints"],
+  }
