--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
-    "lint:types": "tsc --noEmit",
+    "lint:types": "glint",
     "start": "ember serve",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test"
@@ -34,6 +34,10 @@
     "@embroider/webpack": "^3.1.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@glint/core": "^1.3.0",
+    "@glint/environment-ember-loose": "^1.3.0",
+    "@glint/environment-ember-template-imports": "^1.3.0",
+    "@glint/template": "^1.3.0",
     "@tsconfig/ember": "^3.0.3",
     "@types/ember": "^4.0.11",
     "@types/ember-data": "^4.4.16",
@@ -65,12 +69,13 @@
     "@types/rsvp": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.0.2",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.0",
     "ember-auto-import": "^2.6.3",
     "ember-cli": "~5.1.0",
     "ember-cli-app-version": "^6.0.1",
-    "ember-cli-babel": "^7.26.11",
+    "ember-cli-babel": "^8.2.0",
     "ember-cli-clean-css": "^2.0.0",
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.2.0",
@@ -80,24 +85,29 @@
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
-    "ember-page-title": "^7.0.0",
+    "ember-page-title": "^8.2.1",
     "ember-qunit": "^7.0.0",
     "ember-resolver": "^10.1.1",
     "ember-source": "~5.1.1",
+    "ember-template-imports": "^4.0.0",
     "ember-template-lint": "^5.11.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-ember": "^11.9.0",
+    "eslint-plugin-ember": "12.0.0",
     "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-qunit": "^8.0.0",
     "loader.js": "^4.7.0",
-    "prettier": "^2.8.8",
+    "postcss": "^8.0.0",
+    "postcss-loader": "^7.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-ember-template-tag": "^2.0.0",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
-    "stylelint-prettier": "^3.0.0",
+    "stylelint-prettier": "^4.0.0",
+    "tailwindcss": "^3.0.0",
     "tracked-built-ins": "^3.1.1",
     "typescript": "^5.3.3",
     "webpack": "^5.88.1"
@@ -107,5 +117,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "ember-cli-string-utils": "^1.1.0"
   }
 }
